# onomaturgy

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  config.py  pyproject.toml  smoke_test.py
generators/: base_generator.py  generator_factory.py  helpers.py  markov_chain.py  name_transformers.py  personal_name.py  place_name.py  simple_name.py  tribal_name.py  word_constraints.py  word_generator.py
helpers/: csv_loaders.py
onomaturgy/: __init__.py
onomaturgy/generators/: constants.py  generator_factory.py  helpers.py  markov_chain.py  personal_name.py  place_name.py  simple_name.py  tribal_name.py  word_constraints.py  word_generator.py
onomaturgy/helpers/: data_manager.py
tests/: conftest.py  test_data_manager.py  test_helpers.py  test_integration.py  test_markov_chain.py  test_name_transformers.py  test_word_constraints.py  test_word_generator.py
tools/: compile_toponyms.py
