[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "onomaturgy"
version = "0.2.4"
description = "Procedural name generator for historical and fantasy world-building"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["generators*", "helpers*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
markers    = ["integration: uses real CSV data (requires onomaturgy-data installed)"]
